Update .gitlab-ci.yml file